# Trip-Analytics

./: .dockerignore  .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  weather_data_pivoted.csv  weather_pivoted.csv
.github/workflows/: build_and_upload_package.yml  build_and_upload_whl.yml  create_or_replace_sproc.yml  deploy_on_merge.yml  deploy_sproc_load_trip.yml  deploy_sproc_load_weather.yml  deploy_sproc_run_pipeline.yml  fetch_and load_data.yml  fetch_weather_data.yml  run_unit_test_on_pr.yml
airflow/: Dockerfile  docker-compose.yaml  requirements.txt
airflow/dags/: datasets.py  run_trip_pipeline.py  trip_data_ingest_dag.py  weather_data_ingest_dag.py  weather_ingest_dag.py
archive/: Dockerfile  create_or_replace_sproc.yml  deploy_on_merge.yml  proc_wrapper.py
archive/notebooks/: ETL.ipynb
archive/weather_data_extraction/: fetch_weather_data.py
notebooks/: ETL.ipynb
src/: app.py
src/configs/: connection_config.py  data_objects.py
src/dq/: dq_check.py
src/tests/: test_dq.py  test_transformation.py
src/transform/: trip_data_transformer.py
src/trip_pipeline/: app.py  proc_wrapper.py
src/trip_pipeline/configs/: data_objects.py
src/trip_pipeline/dq/: dq_check.py
src/trip_pipeline/ingestion/: base_client.py  load_trip_from_stage.py  (+3 more)
terraform/: .terraform.lock.hcl  DQ_tables.tf  analytics.tf  db.tf  landing_tables.tf  schema.tf  sds.tf  stage.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
tests/: test_dq.py  test_transformation.py
weather_data_extraction/: fetch_weather_data.py  upload_to_sf.py
(+10 files in other folders)
