[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trip-pipeline"
version = "0.1.0"
description = "Snowpark ETL for trip and weather analytics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "snowflake-snowpark-python",
    "pandas",
    "requests"
]

[tool.setuptools.packages.find]
where = ["src"]